--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>To do list</title>
+        <title>Simple list</title>
         <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
 
-    <h1>ToDo list</h1>
+    <h1>Simple list</h1>
     <div class="container" id="container">
         <span><input id="inputText"/> <input id='addNewItem' type="button" value='add' /></span>
         <div id="content"></div>
     </div>
 
     <script id="listContainer" type="text/x-handlebars-template">
-           <span id="description"  class="list-description {{isListEmpty todoItems}}" >
-             {{#getListDescription todoItems}}
+           <span id="description"  class="list-description {{isListEmpty listItems}}" >
+             {{#getListDescription listItems}}
              {{/getListDescription}}
             </span>
-        {{#each todoItems}}
+        {{#each listItems}}
             {{> item label=label id=id}}
         {{/each}}
     </script>
 
 
     <script id="item" type="text/x-handlebars-template" >
-        <div class="todo-list__item">
+        <div class="simple-list__item">
             <label >{{label}}</label><button id={{id}} class='removeButton'>Remove</button>
         </div>
     </script>
