--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <script id="item" type="text/x-handlebars-template" >
         <div class="simple-list__item">
-            <label >{{label}}</label><button id={{id}} class='removeButton'>Remove</button>
+            <label >{{label}}</label><button id={{id}} class='removeButton'>Delete</button>
         </div>
     </script>
 
